109-fixed infinity symbol alignment

--- a/styles.less
+++ b/styles.less
@@ -141,7 +141,7 @@ body {
 				bottom: 11.5vh;
 				left: -215px;
 			}
-			
+
 
 		}
 
@@ -366,7 +366,7 @@ body {
 				margin-left: 10vw;
 			}
 		}
-		
+
 		.slide-10 {
 			.image-background {
 				position: absolute;
@@ -531,7 +531,7 @@ body {
 				left: -27vw;
 				height: 55vh;
 			}
-			
+
 		}
 
 		.slide-5 {
@@ -704,7 +704,7 @@ body {
 				left: 95vw;
 				height: 35vh;
 			}
-			
+
 		}
 
 		.slide-5 {
@@ -947,19 +947,6 @@ body {
 				font-size: 1.5rem !important;
 				margin-top: 1rem;
 				color: #e34b54;
-				position: relative;
-				padding-top: 5.5rem !important;
-				text-align: center;
-
-				b {
-					font-weight: 900;
-					font-size: 13rem;
-					position: absolute;
-					top: -6.7rem;
-					left: 0px;
-					right: 0px;
-				}
-
 			}
 		}
 	}
@@ -1343,7 +1330,7 @@ body {
 			}
 		}
 	}
-	
+
 	.text-slide-11 {
 		.slide-title {
 			color: #7D2A32;
@@ -1404,7 +1391,7 @@ body {
 				margin-top: 40vh;
 				margin-left: 15vw;
 			}
- 
+
 			#ca-technologies-logo {
 				position: absolute;
 				height: @logoHeight;
@@ -1420,7 +1407,7 @@ body {
 			}
 		}
 	}
-	
+
 	.text-slide-12 {
 		.slide-title {
 			color: #7D2A32;
